tests/baselines/reference/functionOverloads40.errors.txt
tests/cases/compiler/functionOverloads40.ts(4,13): error TS2345: Argument of type '[{ a: "bar"; }]' is not assignable to parameter of type '{ a: boolean; }[]'.
  Types of property 'push' are incompatible.
    Type '(...items: { a: "bar"; }[]) => number' is not assignable to type '(...items: { a: boolean; }[]) => number'.
      Types of parameters 'items' and 'items' are incompatible.
        Type '{ a: boolean; }' is not assignable to type '{ a: "bar"; }'.
          Types of property 'a' are incompatible.
            Type 'boolean' is not assignable to type '"bar"'.


==== tests/cases/compiler/functionOverloads40.ts (1 errors) ====
    function foo(bar:{a:number;}[]):string;
    function foo(bar:{a:boolean;}[]):number;
    function foo(bar:{a:any;}[]):any{ return bar }
    var x = foo([{a:'bar'}]);
                ~~~~~~~~~~~
!!! error TS2345: Argument of type '[{ a: "bar"; }]' is not assignable to parameter of type '{ a: boolean; }[]'.
!!! error TS2345:   Types of property 'push' are incompatible.
!!! error TS2345:     Type '(...items: { a: "bar"; }[]) => number' is not assignable to type '(...items: { a: boolean; }[]) => number'.
!!! error TS2345:       Types of parameters 'items' and 'items' are incompatible.
!!! error TS2345:         Type '{ a: boolean; }' is not assignable to type '{ a: "bar"; }'.
!!! error TS2345:           Types of property 'a' are incompatible.
!!! error TS2345:             Type 'boolean' is not assignable to type '"bar"'.
    